# develop_debug

./: .gitignore  Cargo.toml  README.md  T.README.md  build.rs
src/: copy_mode.rs  enable_debug.rs  ignore_debug.rs  lib.rs
src/mode/: debug_mode.rs  release_mode.rs
tests/: how_to_use.rs
