[package]
name = "develop_debug"
version = "0.4.0"
authors = ["cheeroncode <code@autodo.xyz>"]
edition = "2018"


description = "Print debugging information at development time"
keywords = ["debug", "print"]
categories = ["development-tools","accessibility"]
homepage = "https://autodo.xyz"
repository = "https://github.com/cheeroncode/develop_debug"
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
